# bull-vision-agent

./: .env.example  .gitignore  Makefile  README.md  create_telegram_chatbot_multi_mcp_server.md  fastapi_mcphub.md  init_telegram_openai_agent.md  pyproject.toml
app/: __init__.py  main.py  startup.py
app/api/: telegram_webhook.py
app/bot/: agent.py  bot.py  context.py  telegram_handler.py  tools.py
app/controllers/: news_controller.py  portfolio.py
app/core/: settings.py
app/models/: news.py
app/prompts/: agent.py  trading_expert.py  user_input.py
app/schemas/: base.py  telegram.py
app/services/: mongodb_service.py
app/services/telegram/: __init__.py  handler.py
bot/: __init__.py  agent.py  bot.py  context.py  telegram_handler.py
controllers/: news_controller.py
core/: settings.py
models/: news.py
services/: mongodb_service.py
tests/services/telegram/: test_handler.py
